@@ -9,5 +9,6 @@ use if $ENV{AUTOMATED_TESTING}, 'Test::DiagINC';
 use ExtUtils::MakeMaker ();
 use lib 'examples/lib';
 use Foo;
+eval { require SyntaxErr };
 
 
